# rust

./: .env.sample  .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/cli/: cli.rs
common/src/net/: mod.rs  params.rs
common/src/utils/: time.rs
common/tests/: integration.rs
dev/test-server/: cert.pem  hosts.txt  key.pem  package-lock.json  package.json
dev/test-server/src/: hosts.js  main.js  server.js
grpc/: Cargo.toml  build.rs
grpc/proto/: orders.proto
grpc/src/: lib.rs
grpc/src/services/: mod.rs  orders.rs
infra/: Cargo.toml  build.rs
infra/proto/: common.proto  health.proto  market.proto  message_stream.proto  trading.proto
infra/src/: lib.rs
infra/src/error/: error.rs  mod.rs
infra/src/macros/: spawn.rs
infra/src/model/: common.rs  common_proto.rs  health_proto.rs  market_proto.rs  message_stream_proto.rs  mod.rs  trading.rs  trading_proto.rs  venue.rs
infra/src/net/: mod.rs
infra/src/utils/: time.rs
mybin/: Cargo.toml
mybin/src/: main.rs
mylib/: Cargo.toml
mylib/src/: lib.rs
mylib/src/cli/: cli.rs  mod.rs
mylib/src/math2d/: mod.rs  point2.rs
mylib/src/math2d/utils/: mod.rs
mylib/src/model/: common.rs  mod.rs  orders.rs  trading.rs
mylib/src/net/: mod.rs  params.rs
mylib/src/venues/binance/: api.rs  binance.rs  mod.rs
mylib/tests/: integration.rs
node/: Cargo.toml
node/src/: main.rs
node/src/grpc/: grpc.rs  health.rs  market.rs  message_stream.rs  mod.rs  trading.rs
node/src/venues/: factory.rs  mod.rs
node/src/venues/binance/: adapter.rs  api.rs  binance.rs  mod.rs
oms/: Cargo.toml
oms/src/: node.rs  old.rs  terminal.rs
oms/src/grpc/: grpc.rs  mod.rs
oms/src/grpc/services/: orders.rs  service.rs
proto_types/: Cargo.toml  build.rs
proto_types/proto_files/: common.proto  trading.proto
proto_types/src/: lib.rs
src/: lib.rs  main.rs
src/math2d/: mod.rs  point3.rs
src/math2d/nested/: foobar.rs  mod.rs
src/math2d/utils/: hello_world.rs
terminal/: Cargo.toml
terminal/src/: grpc.rs  main.rs
terminal/src/cli/: cli.rs
terminal/src/grpc/: grpc.rs  mod.rs
tests/: integration.rs
venues/: Cargo.toml
venues/src/: factory.rs  lib.rs
venues/src/binance/: api.rs  binance.rs  mod.rs
