# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.*"          # random number lib
serde = "1.0.*"         # de/serialisation lib
clap = "3.2.*"          # cli lib
futures = "0.3.*"       # async lib

[dev-dependencies]
