# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap =  { version = "3.2.*", features = ["derive"] }    # cli lib
rand = "0.8.*"                                          # random number lib
serde = "1.0.*"                                         # de/serialisation lib
futures = "0.3.*"                                       # async lib
simple-error = "0.2.*"                                  # simple string error lib

[dev-dependencies]
