# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "proto_types"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7"                                           # grpc lib
prost = "0.10"                                          # proto lib

[build-dependencies]
tonic-build = "0.7"                                     # proto grpc builder lib
